cert-manager/whoami-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging" # let cert manager know we want to use letsencrypt-staging
    # production is subject to strict API rate-limiting
spec:
  tls:
  - hosts:
    - whoami.traefik.com
    secretName: quickstart-example-tls # cert manager will create this secret automatically
  rules:
  - host: whoami.traefik.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              name: web
